--- a/index.html
+++ b/index.html
@@ -304,9 +304,20 @@
           </div>
         </div>
       </div>
+      <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>The Sparks Foundation</h2>
+        </div>
+        <div class="desc">
+            <h3>Web Developer | Internship</h3>
+            <p>August 2023 - september 2023</p>
+        </div>
+      </div>
+    </div>
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
+    <a href="/experience/index.html" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
