--- a/experience/index.html
+++ b/experience/index.html
@@ -127,6 +127,18 @@
         </div>
       </div>
 
+      <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>The Sparks Foundation</h2>
+        </div>
+        <div class="desc">
+            <h3>Web Developer | Internship</h3>
+            <p>August 2023 - september 2023</p>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="morebtn">
